--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Common.Logging.Raven</id>
-        <version>2.3.1</version>
+        <version>3.0.1</version>
         <title>Common.Logging.Raven</title>
         <authors>Usetech</authors>
         <owners>Usetech</owners>
@@ -10,8 +10,8 @@
         <iconUrl>https://www.getsentry.com/_static/getsentry/images/favicon.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Provider for Common.Logging Library to Sentry Raven</description>
-        <releaseNotes>Update to support latest Common.Logging.</releaseNotes>
-        <copyright>Copyright 2014</copyright>
+        <releaseNotes>TLS trouble fixed.</releaseNotes>
+        <copyright>Copyright 2015</copyright>
         <tags>Log Sentry Raven ILog Logging</tags>
         <dependencies>
             <dependency id="Common.Logging" version="2.3.1" />
